# svaha_mini_uploader_axum

./: Cargo.toml
api/: Cargo.toml
api/src/: custom_exceptions.rs  custom_tracing.rs  exceptions.rs  lib.rs
api/src/endpoints/: files.rs  mod.rs  tests.rs  webui.rs
core/: Cargo.toml
core/src/: config.rs  exceptions.rs  lib.rs  logging.rs
docker/: Dockerfile  docker-compose.override.yml  docker-compose.yml  update_files.sh  vector.toml
docker/root/: start-reload.sh
services/: Cargo.toml
services/src/: lib.rs  s3.rs  s3_old.rs
services/src/s3/: errors.rs  manager.rs  mod.rs  multipart.rs  utils.rs
src/: main.rs
