[workspace.package]
edition = "2021"

[workspace]
resolver = "2"
members = [ "api","core"]

[workspace.dependencies]
#----------Inner crates----------
core = { path="core" }
api = { path="api" }

#--------Backend framework--------
axum = { version = "0.8.1", features = ["multipart", "tracing"] }

#-----------Async deps-----------
tokio = { version = "1.44.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace", "compression-full", "decompression-full", "fs"]}
async-trait = "0.1.88"

#---------Serialization----------
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
lazy-regex = "3.4.1"
lazy_static = "1.5.0"

#------------OpenAPI-------------
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-swagger-ui = {version = "9.0.0", features = ["axum"] }
utoipa-axum = "0.2.0"

#------------Logging-------------
tracing-subscriber = {version = "0.3.19", features = ["env-filter"]}
tracing = {version = "0.1.41", features = ["default"]}

#------------Time-------------
chrono = "0.4.40"

#------------Bytes-------------
bytes = "1.10.1"

#----------Parsing env-----------
once_cell = { version = "1.21.2", features = ["default"]} # once compiling config
dotenv = {version = "0.15.0", features = ["clap"]}
clap = {version = "4.5.34", features = ["env", "derive", "help"]}

#----------Enum as int-----------
strum_macros = "0.27.1"
strum = "0.27.1"

[package]
name = "svaha_mini_uploader_axum"
version = "0.1.0"
edition.workspace = true
description = "Axum uploader for svaha-mini"

[dependencies]
#----------Inner crates----------
core.workspace = true
api.workspace = true

#-----------Async deps-----------
tokio.workspace = true

#------------Logging-------------
tracing.workspace = true
tracing-subscriber.workspace = true
tower-http = { workspace = true, features = ["cors"]}

#--------Backend framework--------
axum = { workspace = true, features = ["default"] }

#---------Serialization----------
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true


#------------OpenAPI-------------
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }
#utoipa-axum.workspace = true
