[workspace.package]
edition = "2021"

[workspace]
resolver = "2"
members = ["api","core", "services"]

[workspace.dependencies]
#----------Inner crates----------
core = {path="core"}
api = {path="api"}
services = {path="services"}

#--------Backend framework--------
axum = {version = "0.8.3", features = ["multipart", "tracing"]}

#-----------Async deps-----------
tokio = { version = "1.44.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["timeout", "trace", "compression-full", "decompression-full", "fs"]}
async-trait = "0.1.88"
futures = "0.3.31"
tokio-util = "0.7.14"
tower = "0.5.2"

#---------Serialization----------
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
lazy-regex = "3.4.1"
anyhow = "1.0.97"

#------------OpenAPI-------------
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-swagger-ui = {version = "9.0.1", features = ["axum"] }
utoipa-axum = "0.2.0"

#------------Logging-------------
tracing-subscriber = {version = "0.3.19", features = ["env-filter"]}
tracing = {version = "0.1.41", features = ["default"]}

#------------Time-------------
chrono = "0.4.40"

#------------Bytes-------------
bytes = "1.10.1"
rfc7239 = "0.1.3"

#----------Parsing env-----------
once_cell = {version = "1.21.3", features = ["default"]} # once compiling config
dotenv = {version = "0.15.0", features = ["clap"]}
clap = {version = "4.5.35", features = ["env", "derive", "help"]}

#----------Enum as int-----------
strum_macros = "0.27.1"
strum = "0.27.1"

#----------Generating data-----------
ulid = "1.2.1"
rand = "0.9.0"

#----------------AWS-----------------
aws-sdk-s3 = "1.82.0"

#----------ERROR HANDLING-----------
thiserror = "2.0.12"


#----------------------------MAIN CRATE-------------------------------
[package]
name = "svaha_mini_uploader_axum"
version = "0.1.0"
edition.workspace = true
description = "Axum uploader for svaha-mini"

[dependencies]
#----------Inner crates----------
core.workspace = true
api.workspace = true
services.workspace = true

#-----------Async deps-----------
tokio.workspace = true

#------------Logging-------------
tracing.workspace = true
tracing-subscriber.workspace = true
tower-http = { workspace = true, features = ["cors"]}

#--------Backend framework--------
axum = {workspace = true, features = ["default"]}

#------------OpenAPI-------------
utoipa = {workspace = true, features = ["axum_extras"]}
utoipa-swagger-ui = {workspace = true, features = ["axum"]}
