[package]
name = "api"
version = "0.1.0"
edition.workspace = true

[dependencies]
#------------Logging-------------
tracing.workspace = true
tracing-subscriber.workspace = true
tower-http = { workspace = true, features = ["trace"]}

#---------Serialization----------
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

#--------Backend framework--------
axum = { workspace = true, features = ["tracing"] }


rfc7239 = "0.1.3"