[package]
name = "api"
version = "0.1.0"
edition.workspace = true

[dependencies]
#----------Inner crates----------
my_core = {package = "core", path="../core"}
services.workspace = true

#-----------Async deps-----------
tokio.workspace = true
tokio-util.workspace = true
futures-util = "0.3.31"

#------------Logging-------------
tracing.workspace = true
tower-http = { workspace = true, features = ["trace"]}

#---------Serialization----------
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
lazy-regex.workspace = true
once_cell = {workspace = true, features = ["default"]} # once compiling config

#--------Backend framework--------
axum = { workspace = true, features = ["tracing"] }

#------------OpenAPI-------------
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }
utoipa-axum.workspace = true

#------------Bytes-------------
bytes.workspace = true
rfc7239 = "0.1.3"

#----------Enum as int-----------
strum_macros.workspace = true
strum.workspace = true