[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
#--------Backend framework--------
axum = { workspace = true, features = ["default"] }
http-body-util = "0.1.2"

#------------Logging-------------
tracing.workspace = true
tracing-subscriber.workspace = true

#------------Time-------------
chrono.workspace = true

#----------Serialization---------
serde.workspace = true
serde_json.workspace = true
lazy-regex.workspace = true

#-----------Async deps-----------
async-trait.workspace = true

#----------Parsing env-----------
once_cell = {workspace = true, features = ["default"]} # once compiling config
dotenv.workspace = true # work with dotenv
clap.workspace = true # .env struct parser

#----------Enum as int-----------
strum_macros.workspace = true
strum.workspace = true

#------------OpenAPI-------------
#utoipa = { workspace = true, features = ["axum_extras"] }
#utoipa-swagger-ui = { workspace = true, features = ["axum"] }
#utoipa-axum.workspace = true