[package]
name = "core"
version = "0.1.0"
edition.workspace = true

[dependencies]
#--------Backend framework--------
axum = { workspace = true, features = ["default"] }
#http-body-util = "0.1.2"

#------------Logging-------------
tracing.workspace = true
tracing-subscriber.workspace = true

#------------Time-------------
chrono.workspace = true

#----------Serialization---------
serde.workspace = true
serde_json.workspace = true
lazy-regex.workspace = true
once_cell = {workspace = true, features = ["default"]} # once compiling config

#-----------Async deps-----------
#async-trait.workspace = true
tower.workspace = true

#----------Parsing env-----------

dotenv.workspace = true # work with dotenv
clap.workspace = true # .env struct parser

#----------Enum as int-----------
#strum_macros.workspace = true
#strum.workspace = true

#----------Generating data-----------
ulid.workspace = true
regex = "1.11.1"